force-app/main/default/objects/Insurance_Company__c/Insurance_Company__c.object-meta.xml
<CustomObject>
    <description>List of Insurance Companies, Assistance Companies, Cost Containment Companies, Collection Agencies, and Vendors.</description>
    <label>Insurance Company</label>
    <nameField>
        <label>Insurance Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>