force-app/main/default/objects/Insurance_Company__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>