force-app/main/default/objects/Insurance_Company__c/fields/Agreement_Discount__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Discount__c</fullName>
    <description>Insurance, cost containment discounts, or Collection fees</description>
    <inlineHelpText>Discounts Provided to Insurances or  Fees Charged by Collection Agency</inlineHelpText>
    <label>Agreement Discount</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Medical Providers 10%</fullName>
            </value>
            <value>
                <fullName>All Medical Providers 15%</fullName>
            </value>
            <value>
                <fullName>ALS1 - Life $2,000</fullName>
            </value>
            <value>
                <fullName>ALS2 - Life $2,300</fullName>
            </value>
            <value>
                <fullName>AMC 10%</fullName>
            </value>
            <value>
                <fullName>AMC 15%</fullName>
            </value>
            <value>
                <fullName>AMC 5%</fullName>
            </value>
            <value>
                <fullName>Balboa - 10%</fullName>
            </value>
            <value>
                <fullName>Belize 10%</fullName>
            </value>
            <value>
                <fullName>Belize 15%</fullName>
            </value>
            <value>
                <fullName>BLS - Life $1,000</fullName>
            </value>
            <value>
                <fullName>BLS - Life $1,400</fullName>
            </value>
            <value>
                <fullName>Blue Net 10%</fullName>
            </value>
            <value>
                <fullName>Blue Net 15%</fullName>
            </value>
            <value>
                <fullName>Case by Case Only</fullName>
            </value>
            <value>
                <fullName>CCI 15% Fee UK</fullName>
            </value>
            <value>
                <fullName>CCI 20% Fee Europe</fullName>
            </value>
            <value>
                <fullName>CCI 30% Fee Rest of the World</fullName>
            </value>
            <value>
                <fullName>Cliscap 10%</fullName>
            </value>
            <value>
                <fullName>Costamed 10%</fullName>
            </value>
            <value>
                <fullName>Costamed 15%</fullName>
            </value>
            <value>
                <fullName>Costamed 20%</fullName>
            </value>
            <value>
                <fullName>Costamed 5%</fullName>
            </value>
            <value>
                <fullName>CSG 35% Fee Above 12 month</fullName>
            </value>
            <value>
                <fullName>Especialidades 10%</fullName>
            </value>
            <value>
                <fullName>Especialidades 15%</fullName>
            </value>
            <value>
                <fullName>GSC 25% Fee Below 12 month</fullName>
            </value>
            <value>
                <fullName>Hospital H+ 10%</fullName>
            </value>
            <value>
                <fullName>Hospital H+ 15%</fullName>
            </value>
            <value>
                <fullName>HTH - Life $2,700</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>