force-app/main/default/objects/Insurance_Company__c/fields/Average_Payment_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Payment_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Average Payment Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>