force-app/main/default/objects/Insurance_Company__c/fields/Claim_Status_Phone__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status_Phone__c</fullName>
    <label>Claim Status Phone</label>
    <type>Phone</type>
</CustomField>