force-app/main/default/objects/Insurance_Company__c/fields/Contacts_Information__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Information__c</fullName>
    <label>Contacts Information</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>