force-app/main/default/objects/Insurance_Company__c/fields/E_mail_Address_1__c.field-meta.xml
<CustomField>
    <fullName>E_mail_Address_1__c</fullName>
    <inlineHelpText>Initial contact e-mail</inlineHelpText>
    <label>E-mail Address 1</label>
    <type>Email</type>
</CustomField>