force-app/main/default/objects/Insurance_Company__c/fields/E_mail_Address_2__c.field-meta.xml
<CustomField>
    <fullName>E_mail_Address_2__c</fullName>
    <inlineHelpText>Claims submission / follow up email</inlineHelpText>
    <label>E-mail Address 2</label>
    <type>Email</type>
</CustomField>