force-app/main/default/objects/Insurance_Company__c/fields/E_mail_Address_3__c.field-meta.xml
<CustomField>
    <fullName>E_mail_Address_3__c</fullName>
    <label>E-mail Address 3</label>
    <type>Email</type>
</CustomField>