force-app/main/default/objects/Insurance_Company__c/fields/Eligibility_Coverage_Phone__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Coverage_Phone__c</fullName>
    <inlineHelpText>Call this number to confirm eligibility and benefits</inlineHelpText>
    <label>Eligibility - Coverage Phone</label>
    <type>Phone</type>
</CustomField>