force-app/main/default/objects/Insurance_Company__c/fields/Flagged_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Flagged_Insurance__c</fullName>
    <label>Flagged Insurance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red Flag</fullName>
            </value>
            <value>
                <fullName>Yellow Flag</fullName>
            </value>
            <value>
                <fullName>Green Flag</fullName>
            </value>
            <value>
                <fullName>No Flag</fullName>
            </value>
            <value>
                <fullName>Ceased to Exist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>