force-app/main/default/objects/Insurance_Company__c/fields/Insurance_Forms__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Forms__c</fullName>
    <inlineHelpText>Claim form must be send with each VOB to the provider if required  by Insurance.</inlineHelpText>
    <label>Insurance Forms Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, scroll down to Notes &amp; Attachments to find form(s)</fullName>
                <color>#33FFFF</color>
                <label>Yes, scroll down to Notes &amp; Attachments to find form(s)</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#FF6666</color>
                <label>No</label>
            </value>
            <value>
                <fullName>Ask Insurance Co.</fullName>
                <color>#FFFF66</color>
                <label>Ask Insurance Co.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>