force-app/main/default/objects/Insurance_Company__c/fields/Pre_Cert_Auth_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pre_Cert_Auth_Phone__c</fullName>
    <inlineHelpText>Authorization department phone number. Call this number to request hospitalization approval from Ins. Co.</inlineHelpText>
    <label>Pre Cert. - Auth. Phone</label>
    <type>Phone</type>
</CustomField>