force-app/main/default/objects/Insurance_Company__c/fields/Reason_for_Flagging_Ins__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Flagging_Ins__c</fullName>
    <inlineHelpText>A brief reason the insurance is being flagged.</inlineHelpText>
    <label>Reason for Flagging Ins.</label>
    <type>TextArea</type>
</CustomField>