force-app/main/default/objects/Insurance_Company__c/fields/Submit_Format__c.field-meta.xml
<CustomField>
    <fullName>Submit_Format__c</fullName>
    <inlineHelpText>preferred claim submission method</inlineHelpText>
    <label>Submit Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
                <color>#0B6FCE</color>
                <label>Address</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <color>#78C953</color>
                <label>Email</label>
            </value>
            <value>
                <fullName>Fax</fullName>
                <color>#E27001</color>
                <label>Fax</label>
            </value>
            <value>
                <fullName>Electronically</fullName>
                <color>#A845DC</color>
                <label>Electronically</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>