force-app/main/default/objects/Insurance_Company__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <label>Zip/Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>