force-app/main/default/objects/Insurance_Company__c/listViews/Insurance_List.listView-meta.xml
<ListView>
    <fullName>Insurance_List</fullName>
    <columns>NAME</columns>
    <columns>Eligibility_Coverage_Phone__c</columns>
    <columns>Claim_Status_Phone__c</columns>
    <columns>Pre_Cert_Auth_Phone__c</columns>
    <columns>Other_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>Select health</label>
</ListView>