force-app/main/default/objects/Insurance_Company__c/listViews/Medipac.listView-meta.xml
<ListView>
    <fullName>Medipac</fullName>
    <columns>NAME</columns>
    <columns>Address_Line_1__c</columns>
    <columns>E_mail_Address_1__c</columns>
    <columns>Eligibility_Coverage_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>Medipac</label>
</ListView>