force-app/main/default/objects/Insurance_Company__c/listViews/ONEWORLD_ASSIST.listView-meta.xml
<ListView>
    <fullName>ONEWORLD_ASSIST</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>IMG</label>
</ListView>