force-app/main/default/objects/Insurance_Company__c/listViews/Outside_Counsel.listView-meta.xml
<ListView>
    <fullName>Outside_Counsel</fullName>
    <columns>NAME</columns>
    <columns>Address_Line_1__c</columns>
    <columns>City__c</columns>
    <columns>Contacts_Information__c</columns>
    <columns>Country__c</columns>
    <columns>Notes__c</columns>
    <columns>Eligibility_Coverage_Phone__c</columns>
    <columns>State__c</columns>
    <columns>Zipcode__c</columns>
    <columns>E_mail_Address_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Outside Counsel</value>
    </filters>
    <label>Outside Counsel</label>
</ListView>